--- a/index.html
+++ b/index.html
@@ -4,3 +4,10 @@ title: Justin Slack Home Page
 description: Personal web site of Justin Slack
 critical: home-page.css
 ---
+
+<section class="main-home">
+  <h1 class="logo">
+    Justin Slack
+  </h1>
+  <p class="tagline">Designer, front-end developer</p>
+</section>
