home page layout and copy

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@ description: Personal web site of Justin Slack
 critical: home-page.css
 ---
 
-<section class="main-home">
-  <h1 class="logo">
-    Justin Slack
+<section class="main-home container">
+
+  <h1 class="home-header">
+    Ui Designer,
+    <span class="home-header-indent">front-end</span>
+    developer
   </h1>
-  <p class="tagline">Designer, front-end developer</p>
+  <p class="lead">
+    Hello I'm Justin Slack — a UI designer, front-end developer, speaker and tech community organiser. For the last five years I have been head of design at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
+  </p>
+
 </section>
