font size change

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ critical: home-page.css
     developer
   </h1>
   <p class="lead">
-    Hello I'm Justin Slack — a UI designer, front-end developer, speaker and tech community organiser. For the last five years I have been head of design and front-end at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
+    Hello, I'm <strong>Justin Slack</strong> — a UI designer, front-end developer, speaker and tech community organiser. For the last five years I have been head of design and front-end at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
   </p>
 
 </section>
