--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ critical: home-page.css
 
   <h1 class="home-header">
     Ui Designer,
-    <span class="home-header-indent">front-end</span>
-    developer
+    <span class="home-header-indent">front-end
+    developer</span>
   </h1>
   <p class="lead">
     Hello, I'm <strong>Justin Slack</strong> — a UI designer, front-end developer, speaker and tech community organiser. For the last five years I have been head of design and front-end at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
