--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ critical: home-page.css
     <p>For examples of the above work please visit the <a href="https://nml.co.za/work/">NML site</a>.</p>
 
     <h2>Past work</h2>
-    <p>Prior to joining NML I worked as a freelance deisgner, developer and educator. Clients I worked for include Times Media (now Tiso Blackstar), Platform 45, Unlike Media, Greater Good, TUI Travel and Lightstone.</p>
+    <p>Prior to joining NML I worked as a freelance designer, developer and educator. Clients I worked for include Times Media (now Tiso Blackstar), Platform 45, Unlike Media, Greater Good, TUI Travel and Lightstone.</p>
 
     <h2>Teaching</h2>
     <p>For many years I taught UI design, HTML, CSS and javascript on both the full and part time programmes at the <a href="http://www.ada.ac.za/">Academy of Digital Arts</a> (formerly Friends of Design). In additon to teaching I designed course curricula, outcomes and study material for a range of student levels.</p> 
