--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ critical: home-page.css
 
   <article class="home-section">
     <h2>Current work</h2>
-    <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have designed and built web and mobile applications for a range of clients including <a href="https://nww.nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
+    <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have designed and built web and mobile applications for a range of clients including <a href="https://nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
 
     <p>The design team has also been responsible for UI and UX design for NML's affiliated company <a href="https://atura.ai">Atura's</a> products, a range of chatbots for the financial services industry.</p>
 
@@ -36,9 +36,12 @@ critical: home-page.css
 
     <h2>Community</h2>
     <p>Being active in the front-end and design community in Cape Town is very important to me.</p>
+
     <p>I am a co-founder and organiser of the <a href="https://ctfeds.org">Cape Town Front-end developer</a> meetup. Since 2012 we have run <a href="https://www.meetup.com/ctfeds/">monthly talks and workshops</a> and at last count have close to 2500 members.</p>
-    <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include <a href="https://www.devconf.co.za/">DevConf</a>, <a href="http://uxsouthafrica.com/">UX South Africa</a>, <a href="https://www.meetup.com/DeveloperUG/">The Developer User Group</a>, <a href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/">The Scrum User Group</a> <a href="https://www.meetup.com/Cape-Town-Dribbble-Community/">and The Cape Town Dribbble Community</a> (full list coming soon).</p>
-    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of designers, developers, data scientists and journalists working on web site for the <a href="https://budgetjusticsa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
+
+    <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include <a href="https://www.devconf.co.za/">DevConf</a>, <a href="http://uxsouthafrica.com/">UX South Africa</a>, <a href="https://www.meetup.com/DeveloperUG/">The Developer User Group</a>, <a href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/">The Scrum User Group</a> and <a href="https://www.meetup.com/Cape-Town-Dribbble-Community/">The Cape Town Dribbble Community</a> (full list coming soon).</p>
+
+    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of designers, developers, data scientists and journalists working on web site for the <a href="https://budgetjusticesa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
 
     <h3>Find me elsewhere</h3>
     <p>
