--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ critical: home-page.css
 
   <h1 class="home-header">
     Ui Designer,
-    <span class="home-header-indent">front-end
-    developer</span>
+    <span class="home-header-indent">Front-end
+    Developer</span>
   </h1>
   
   <small class="progress">Site in progress</small>
@@ -24,7 +24,7 @@ critical: home-page.css
     <h2>Current work</h2>
     <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have designed and built web and mobile applications for a range of clients including <a href="https://nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
 
-    <p>The design team has also been responsible for UI and UX design for NML's affiliated company <a href="https://atura.ai">Atura's</a> products, a range of chatbots for the financial services industry.</p>
+    <p>The design team has also been responsible for UI and UX design for NML's affiliated company <a href="https://atura.ai">Atura's</a> range of chatbots for the financial services industry.</p>
 
     <p>For examples of the above work please visit the <a href="https://nml.co.za/work/">NML site</a>.</p>
 
@@ -32,16 +32,16 @@ critical: home-page.css
     <p>Prior to joining NML I worked as a freelance designer, developer and educator. Clients I worked for include Times Media (now Tiso Blackstar), Platform 45, Unlike Media, Greater Good, TUI Travel and Lightstone.</p>
 
     <h2>Teaching</h2>
-    <p>For many years I taught UI design, HTML, CSS and javascript on both the full and part time programmes at the <a href="http://www.ada.ac.za/">Academy of Digital Arts</a> (formerly Friends of Design). In additon to teaching I designed course curricula, outcomes and study material for a range of student levels.</p> 
+    <p>For many years I taught UI design, HTML, CSS and javascript on both the full- and part-time programmes at the <a href="http://www.ada.ac.za/">Academy of Digital Arts</a> (formerly Friends of Design). In additon to teaching I designed course curricula, outcomes and study material for a range of student levels.</p> 
 
     <h2>Community</h2>
     <p>Being active in the front-end and design community in Cape Town is very important to me.</p>
 
-    <p>I am a co-founder and organiser of the <a href="https://ctfeds.org">Cape Town Front-end developer</a> meetup. Since 2012 we have run <a href="https://www.meetup.com/ctfeds/">monthly talks and workshops</a> and at last count have close to 2500 members.</p>
+    <p>I am a co-founder and organiser of the <a href="https://ctfeds.org">Cape Town Front-end Developer</a> meetup. Since 2012 we have run <a href="https://www.meetup.com/ctfeds/">monthly talks and workshops</a> and at last count have close to 2500 members.</p>
 
     <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include <a href="https://www.devconf.co.za/">DevConf</a>, <a href="http://uxsouthafrica.com/">UX South Africa</a>, <a href="https://www.meetup.com/DeveloperUG/">The Developer User Group</a>, <a href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/">The Scrum User Group</a> and <a href="https://www.meetup.com/Cape-Town-Dribbble-Community/">The Cape Town Dribbble Community</a> (full list coming soon).</p>
 
-    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of designers, developers, data scientists and journalists working on web site for the <a href="https://budgetjusticesa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
+    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of designers, developers, data scientists and journalists working on a website for the <a href="https://budgetjusticesa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
 
     <h3>Find me elsewhere</h3>
     <p>
