--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ critical: home-page.css
     <p>Prior to joining NML I worked as a freelance designer, developer and educator. Clients I worked for include Times Media (now Tiso Blackstar), Platform 45, Unlike Media, Greater Good, TUI Travel and Lightstone.</p>
 
     <h2>Teaching</h2>
-    <p>For many years I taught UI design, HTML, CSS and javascript on both the full- and part-time programmes at the <a href="http://www.ada.ac.za/">Academy of Digital Arts</a> (formerly Friends of Design). In additon to teaching I designed course curricula, outcomes and study material for a range of student levels.</p> 
+    <p>For many years I taught UI design, HTML, CSS and javascript on both the full- and part-time programmes at the <a href="http://www.ada.ac.za/">Academy of Digital Arts</a> (formerly Friends of Design). In addition to teaching I designed course curricula, outcomes and study material for a range of student levels.</p> 
 
     <h2>Community</h2>
     <p>Being active in the front-end and design community in Cape Town is very important to me.</p>
