--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ critical: home-page.css
 <section class="main-home container">
 
   <h1 class="home-header">
-    Ui Designer,
+    UI Designer,
     <span class="home-header-indent">Front-end
     Developer</span>
   </h1>
