--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: home
 title: Justin Slack Home Page
 description: Personal web site of Justin Slack
-critical: home-page.css
+critical: home-page.min.css
 ---
 
 <section class="main-home container">
