--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
-title: Justin Slack Home Page
-description: Personal web site of Justin Slack
+title: JustinSlack.com
+description: Designger. Front-end developer. Speaker. Tech community organiser. Work @NML.
 critical: home-page.min.css
 ---
 
