--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: JustinSlack.com
-description: Designger. Front-end developer. Speaker. Tech community organiser. Work @NML.
+description: Designer. Front-end developer. Speaker. Tech community organiser. Work @NML.
 critical: home-page.min.css
 ---
 
