--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ critical: home-page.min.css
     <h2>Community</h2>
     <p>Being active in the front-end and design community in Cape Town is very important to me.</p>
 
-    <p>I am a co-founder and organiser of the <a href="https://ctfeds.org">Cape Town Front-end Developer</a> meetup. Since 2012 we have run 70 <a href="https://www.meetup.com/ctfeds/">monthly talks and workshops</a> and at last count have close to 2500 members.</p>
+    <p>I am a co-founder and organiser of the <a href="https://ctfeds.org">Cape Town Front-end Developer</a> meetup. Since 2012 we have run 70 <a href="https://www.meetup.com/ctfeds/">monthly talks and workshops</a> and at last count have over 2500 members.</p>
 
     <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include <a href="https://www.devconf.co.za/">DevConf</a>, <a href="http://uxsouthafrica.com/">UX South Africa</a>, <a href="https://www.meetup.com/DeveloperUG/">The Developer User Group</a>, <a href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/">The Scrum User Group</a> and <a href="https://www.meetup.com/Cape-Town-Dribbble-Community/">The Cape Town Dribbble Community</a> (full list coming soon).</p>
 
