--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ critical: home-page.min.css
     <h2>Current work</h2>
     <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have designed and built web and mobile applications for a range of clients including <a href="https://nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
 
-    <p>The design team has also been responsible for UI and UX design for NML-affiliated-company <a href="https://atura.ai">Atura's</a> range of chatbots for the financial services industry.</p>
+    <p>The design team has also been responsible for UI and UX design for NML-affiliated company <a href="https://atura.ai">Atura's</a> range of chatbots for the financial services industry.</p>
 
     <p>For examples of the above work please visit the <a href="https://nml.co.za/work/">NML site</a>.</p>
 
