--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ critical: home-page.min.css
 
     <p>In addition to organising community events I also speak at conferences and meetups and have run a number of workshops. These include <a href="https://www.devconf.co.za/">DevConf</a>, <a href="http://uxsouthafrica.com/">UX South Africa</a>, <a href="https://www.meetup.com/DeveloperUG/">The Developer User Group</a>, <a href="https://www.meetup.com/Cape-Town-Scrum-User-Group-SUGSA/">The Scrum User Group</a> and <a href="https://www.meetup.com/Cape-Town-Dribbble-Community/">The Cape Town Dribbble Community</a> (full list coming soon).</p>
 
-    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of designers, developers, data scientists and journalists working on a website for the <a href="https://budgetjusticesa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
+    <p>I am a regular at the <a href="https://www.meetup.com/Codebridge/events/bznrhryznbfb/">Codebridge Community Evening</a> - a collaborative civic tech meetup - where I am part of a team of activists, designers, developers, data scientists and journalists working on a website for the <a href="https://budgetjusticesa.org">Budget Justice Coalition</a>, a civil society coalition that aims to collaboratively build people's participation in and understanding of South Africa's budget and planning processes.</p>
 
     <h3>Find me elsewhere</h3>
     <p>
