--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ critical: home-page.min.css
 
 
   <p class="lead">
-    Hello, I'm <strong>Justin Slack</strong> — a UI designer, front-end developer, speaker and tech community organiser. I am currently head of design and front-end at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
+    Hello, I'm <strong>Justin Slack</strong> — a team leader, UI designer, front-end developer, speaker and tech community organiser. I am currently head of design and front-end at <a href="https://nml.co.za">NML</a>, a specialist financial services software development company in Cape Town, South Africa.
   </p>
 
   <article class="home-section">
