Change copy on home page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ critical: home-page.min.css
 
   <h1 class="home-header">
     UI Designer,
-    <span class="home-header-indent">Front-end
-    Developer</span>
+    <span class="home-header-indent">Front-end Developer</span>
   </h1>
   
   <small class="progress">Site in progress</small>
