--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ critical: home-page.min.css
 
   <article class="home-section">
     <h2>Current work</h2>
-    <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have built design sytems and front-ends for a range of clients including <a href="https://nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
+    <p>For the past six years I have led the design and frontend team at <strong>NML</strong>. During this time we have built design systems and front-ends for a range of clients including <a href="https://nedgroupinvestments.co.za/">Nedgroup Investments</a>, <a href="https://www.10x.co.za/">10x</a>, <a href="https://www.silica.net/">Silica</a>, <a href="https://www.africanrainbowlife.co.za/">African Rainbow Life</a>, <a href="https://www.stanlib.com/">Stanlib</a> and <a href="https://www.pamgolding.co.za/">Pam Golding</a>.</p>
 
     <p>The design team has also been responsible for UI and UX design for NML-affiliated company <a href="https://atura.ai">Atura's</a> range of chatbots for the financial services industry.</p>
 
