--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 layout: layouts/home.njk
 title: Home
 metaTitle: JustinSlack.com
-metaDesc: Jsutin Slack's personal website. Design, front-end, music.
+metaDesc: Justin Slack's personal website. Design, front-end, music.
 socialImage: /static/images/feconf-logo.png
 ---
