--- a/playground/reflections/index.html
+++ b/playground/reflections/index.html
@@ -38,6 +38,10 @@
     height: 75px;
     -webkit-box-reflect: below 15px linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.4));
   }
+
+  button:focus {
+    outline: none;
+  }
   
 </style>
 
